--- a/public/base.css
+++ b/public/base.css
@@ -1,11 +1,5 @@
 /* Base stylesheet contains only HTML elements & provides default appearance */
 
-/* IBM Plex Mono */
-@font-face { font-family: 'IBM Plex Mono'; font-weight: 400; font-style: normal; src: url('/plex/IBMPlexMono-Regular.woff2') format('woff2'); }
-@font-face { font-family: 'IBM Plex Mono'; font-weight: 400; font-style: italic; src: url('/plex/IBMPlexMono-RegularItalic.woff2') format('woff2'); }
-@font-face { font-family: 'IBM Plex Mono'; font-weight: 600; font-style: normal; src: url('/plex/IBMPlexMono-Bold.woff2') format('woff2'); }
-@font-face { font-family: 'IBM Plex Mono'; font-weight: 600; font-style: italic; src: url('/plex/IBMPlexMono-BoldItalic.woff2') format('woff2'); }
-
 :root {
     color-scheme: light dark;
 }
@@ -45,7 +39,7 @@ html {
     /* type */
     --sans-serif: 'Helvetica Neue', Inter, Roboto, 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
     --serif: Charter, 'Bitstream Charter', 'Sitka Text', Cambria, serif;
-    --monospace: 'IBM Plex Mono', ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
+    --monospace: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
     --default-line-height: 1.5;
     --default-font-size: 18px;
     --smaller-font-size: 85%;
