--- a/public/base.css
+++ b/public/base.css
@@ -59,6 +59,7 @@ html {
 
     /* global defaults */
     font-size: var(--default-font-size);
+    height: 100%;
     scroll-behavior: smooth;
 }
 
@@ -73,6 +74,7 @@ body {
     color: var(--loud);
     container-type: inline-size;
     font-family: var(--serif);
+    height: 100%;
     line-height: var(--default-line-height);
 }
 main {
